feat : bump version 2.0.0

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "css-is-mental",
-    "version": "1.3.0",
-    "description": "CSS Mental model ",
+    "version": "2.0.0",
+    "description": "CSS Mental model",
     "main": "index.js",
     "scripts": {
-        "css": "postcss ./css/index.css  --o ./out/styles.css",
+        "magic": "npm run critical && npm run framework && npm run features",
+        "comment": "##### css-tokens.js is empty try 'npm run framework' #####",
+        "framework": "postcss ./css/index.css  --o ./out/framework.css",
+        "features": "postcss ./css/features.css  --o ./out/features.css",
         "critical": "postcss ./css/critical.css  --o ./out/critical.css",
-        "all": "npm run critical && npm run css",
-        "watch": "postcss ./css/index.css --no-map --o ./out/styles.css --watch --verbose",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "watch": "postcss ./css/index.css --no-map --o ./out/framework.css --watch --verbose"
     },
     "keywords": [
         "CSS"
